...
import androidx.compose.ui.unit.dp

@Composable
internal fun SettingsListRow(
    label: String,
    value: String? = null,
    tag: String = "",
    onClick: (() -> Unit)? = null,
    showArrow: Boolean = true,
) {
    Row(
        Modifier.fillMaxWidth()
            .heightIn(min = 56.dp)
...
